# python-actions-test

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  conftest.py  pyproject.toml  test_layout.py
.github/actions/setup/: action.yml
.github/workflows/: build-pipeline.yml  code-quality.yml  test-build.yml
src/: __init__.py  app.py
src/components/: figures.py  layout.py
src/data/: loader.py
tests/: test_app.py  test_layout.py
