[project]
name = "python-actions-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dan Thackray", email = "djthackray@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
python-actions-test = "python_actions_test:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "commitizen>=3.31.0",
]
