[project]
name = "python-actions-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dan Thackray", email = "djthackray@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "commitizen>=3.31.0",
    "pre-commit>=4.0.1",
    "pyright>=1.1.389",
    "ruff>=0.8.0",
]
